# ai-chatbot

./: .env.example  .eslintrc.json  .gitattributes  .gitignore  AGENTS.md  Makefile  README.md  TODO.md  ai-chatbot.service  package.json  pyproject.toml  requirements.txt  yoyo.ini
.claude/agents/: api-endpoint.md  code-reviewer.md  docs-updater.md  e2e-debugger.md  migration-creator.md  pre-commit.md  test-writer.md
.claude/commands/: fix-bug.md  new-feature.md
.claude/hooks/: auto-format.sh
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: audit.yml  test.yml
docker/code-sandbox/: Dockerfile
docs/: README.md  conventions.md  logging.md  testing.md
docs/architecture/: api-design.md  authentication.md  database.md  streaming-metadata.md
docs/features/: agents.md  chat-and-streaming.md  cost-tracking.md  file-handling.md  integrations.md  language-learning.md  memory-and-context.md  push-notifications.md  search.md  sync.md  ui-features.md  voice-and-tts.md
docs/ui/: components.md  mobile-and-pwa.md  patterns.md  scroll-behavior.md
migrations/: 0001_initial_schema.py  0002_add_files_column.py  0003_add_details_column.py  0003_add_sources_column.py  0004_add_generated_images_column.py  0005_add_cost_tracking.py  0006_add_image_generation_cost.py  0007_drop_agent_states.py  0008_add_indexes.py  0009_add_user_memories.py  0010_add_custom_instructions.py  0011_create_blob_store.py  0012_migrate_files_to_blob_store.py  0013_add_app_settings.py  0014_remove_redundant_blob_index.py  0015_add_full_text_search.py  0016_add_language_column.py  0017_detect_message_languages.py  0018_add_todoist_fields.py  0019_add_google_calendar_fields.py  0020_add_planner_support.py  0021_add_dashboard_cache.sql  0021_add_weather_cache.py  0022_add_calendar_selection.py  0023_add_calendar_cache.py  0024_add_autonomous_agents.py  0025_add_agent_budget_limit.py  0026_add_whatsapp_phone.py  0027_upgrade_pro_model.py  0028_add_garmin_fields.py  0029_add_kv_store.py  0030_archive_conversations.py  0031_add_sports_tracking.py  0032_add_language_learning.py  0033_upgrade_fast_model.py  0034_add_context_cache_table.py  0035_add_stream_journal.py  0036_add_push_subscriptions.py  0037_add_daily_briefing_agent.py  0038_add_agent_fresh_context.py  (+7 more)
scripts/: analyze_costs.py  backup_databases.py  cleanup_checkpoints.py  cleanup_files.py  defragment_memories.py  encrypt_existing_tokens.py  generate_vapid_keys.py  run_agent_scheduler.py  test_memory_stream.py  update_currency_rates.py  vacuum_databases.py
src/: app.py  config.py  constants.py
src/agent/: agent.py  chat_agent.py  compaction.py  content.py  context_cache.py  conversation_compaction.py  daily_briefing.py  dev_scheduler.py  executor.py  gemini_files.py  graph.py  history.py  permissions.py  prompts.py  retry.py  scheduler.py  tool_display.py  tool_results.py  tools.py
src/api/: errors.py  rate_limiting.py  routes.py  schemas.py  utils.py  validation.py
src/auth/: garmin_auth.py  google_auth.py  google_calendar.py  google_oauth.py  jwt_auth.py  oauth_state.py  todoist_auth.py
src/db/: blob_store.py  models.py
src/static/: app.js  index.html  styles.css
src/templates/: index.html  privacy.html
src/utils/: background_thumbnails.py  connection_pool.py  costs.py  datetime_utils.py  db_helpers.py  file_retention.py  files.py  images.py  logging.py  media_retention.py  planner_data.py  push.py  token_crypto.py  weather.py
static/: manifest.json  openapi.json
systemd/: ai-chatbot-agent-scheduler.service  ai-chatbot-agent-scheduler.timer  ai-chatbot-backup.service  ai-chatbot-backup.timer  ai-chatbot-checkpoint-cleanup.service  ai-chatbot-checkpoint-cleanup.timer  ai-chatbot-currency.service  ai-chatbot-currency.timer  ai-chatbot-file-cleanup.service  ai-chatbot-file-cleanup.timer  ai-chatbot-memory-defrag.service  ai-chatbot-memory-defrag.timer  ai-chatbot-vacuum.service  ai-chatbot-vacuum.timer  ai-chatbot.service
tests/: __init__.py  conftest.py  e2e-server.py
tests/fixtures/: __init__.py  images.py  tiny.mov  tiny.webm
tests/integration/: __init__.py  test_code_sandbox_isolation.py  test_db_models.py  test_openapi.py  test_proxy_fix.py  test_routes_agents.py  test_routes_auth.py  test_routes_calendar.py  test_routes_chat.py  test_routes_conversations.py  test_routes_costs.py  test_routes_files.py  test_routes_garmin.py  test_routes_health.py  test_routes_kv_memory_system.py  test_routes_language.py  test_routes_messages_around.py  test_routes_pagination.py  test_routes_planner.py  test_routes_push.py  test_routes_search.py  test_routes_settings.py  test_routes_sports.py  test_routes_sync.py  test_routes_thumbnails.py  test_routes_todoist.py  test_routes_validation.py  test_security_headers.py
tests/mocks/: __init__.py  gemini.py
tests/unit/: __init__.py  test_agent_observability.py  test_agent_tool_modules.py  test_agents.py  test_background_thumbnails.py  test_backup.py  test_blob_store.py  test_browser.py  test_calendar_token_refresh.py  test_chat_agent_helpers.py  test_chat_streaming_timeout.py  test_config.py  test_connection_pool.py  test_context_cache.py  test_conversation_compaction.py  test_costs.py  test_daily_briefing.py  test_datetime_utils.py  test_db_connectivity.py  test_defragment_memories.py  test_destructive_approval_gate.py  test_file_retention.py  test_files.py  test_garmin_auth.py  test_garmin_tool.py  test_gemini_files.py  test_google_auth.py  test_graph.py  test_history.py  test_images.py  test_jwt_auth.py  test_kv_store.py  test_language_db.py  (+21 more)
web/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
(+238 files in other folders)
