[project]
name = "ai-chatbot"
version = "0.1.0"
description = "Personal AI chatbot using Google Gemini APIs"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "python-dotenv>=1.0",
    "google-generativeai>=0.8",
    "langgraph>=0.2",
    "langchain-google-genai>=2.0",
    "pyjwt>=2.8",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "types-requests>=2.31",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "google.generativeai.*",
    "langgraph.*",
    "langchain.*",
    "langchain_google_genai.*",
]
ignore_missing_imports = true
