[project]
name = "ai-chatbot"
version = "0.1.0"
description = "Personal AI chatbot using Google Gemini APIs"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.0",
    "python-dotenv>=1.0",
    "google-generativeai>=0.8",
    "langgraph>=0.2",
    "langchain-google-genai>=2.0",
    "pyjwt>=2.8",
    "requests>=2.31",
    "flask-limiter>=3.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "types-requests>=2.31",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings (includes W291, W293 for trailing whitespace)
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]
# W291 = trailing whitespace
# W293 = blank line contains whitespace
# These are included in "W" but explicitly listed for clarity

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "google.generativeai.*",
    "langgraph.*",
    "langchain.*",
    "langchain_google_genai.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/app.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ ==",
]
